# lyra-api-v3

./: .gitignore  README.md  analyze_annotations.py  analyze_dataset.py  inference.py  main.py  pyproject.toml  test_dataset_processing.py  test_single_image.py  train.py
config/: train_config.json
data/: dataset.py
models/: segmentation_model.py
utils/: metrics.py  visualization.py
